deploy/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-test-app-service
  labels:
    app: App
spec:
  type: NodePort
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: App
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-test-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: App
  template:
    metadata:
      labels:
        app: App
    spec:
      containers:
      - name: app
        image: 985975962340.dkr.ecr.us-east-1.amazonaws.com/hello_devops:latest
        ports:
        - name: webrequests
          containerPort: 5000
# Mount config map
        volumeMounts:
          - name: mnt
            mountPath: /app/templates/index.html
            subPath: file-from-cfgmap
      volumes:
      - name: mnt
        configMap:
          name: app-cfgmap
